--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-css": "npx tailwindcss -i ./src/index.css -o ./public/index.css --watch"
+    "watch-css": "npx tailwindcss -i ./src/index.css -o ./docs/index.css --watch"
   },
   "author": "King-Diorr Willsun",
   "license": "ISC",
